View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023751 | Open CASCADE | OCCT:Modeling Algorithms | public | 2013-02-12 07:25 | 2013-04-29 15:22 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023751: Test case bugs modalg bug6334 does not work with new Boolean Operation Algorithm | ||||
Description | Test case bugs modalg bug6334 does not work with new Boolean Operation Algorithm | ||||
Steps To Reproduce | test bugs modalg bug6334 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_4(009) bug6334 | ||||
|
Git branch CR23751 is ready to be reviewed. |
|
Dear BugMaster, Branch CR23751 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 2710c14597105106b828141187b2b859c384775f Number of compiler warnings: occt component : Linux: 3 (3 on master) Windows: 39 (39 on master) products component : Linux: 9 (9 on master) Windows: 59 (50 on master) Regressions: No regressions Improvements: No improvements Testing cases: bugs modalg_4(009) bug6334 - OK. Testing on Linux: Total MEMORY difference: 238142240 / 238018148 Total CPU difference: 11559.730000000374 / 9041.760000000531 Testing on Windows: Total MEMORY difference: 337254964 / 337367032 Total CPU difference: 18167.484375 / 13957.125 There are not serious differences in images found by testdiff. |
occt: master 3389667b 2013-02-15 12:48:17
|
0023751: Test case bugs modalg bug6334 does not work with new Boolean Operation Algorithm. Fix for the bug. Added simple condition: If the map myShapes (map of the parts of the tool that should be in result shape) is not filled then boolean operation of the given type will be performed. Modified test case bugs/modalg_4/bug6334. Small correction test cases |
Affected Issues 0023751 |
|
mod - src/BRepFeat/BRepFeat_Builder.cdl | Diff File | ||
mod - src/BRepFeat/BRepFeat_Builder.cxx | Diff File | ||
mod - tests/bugs/modalg_4/bug6272_6 | Diff File | ||
mod - tests/bugs/modalg_4/bug6334 | Diff File | ||
mod - tests/bugs/moddata_1/bug152_1 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-02-12 07:25 |
|
New Issue | |
2013-02-12 07:25 |
|
Assigned To | => emv |
2013-02-12 07:51 |
|
Note Added: 0023305 | |
2013-02-12 07:51 |
|
Assigned To | emv => pkv |
2013-02-12 07:51 |
|
Status | new => resolved |
2013-02-12 07:52 |
|
Status | resolved => reviewed |
2013-02-12 07:52 |
|
Assigned To | pkv => mkv |
2013-02-13 19:22 |
|
Note Added: 0023326 | |
2013-02-13 19:23 |
|
Test case number | => bugs modalg_4(009) bug6334 |
2013-02-13 19:23 |
|
Assigned To | mkv => bugmaster |
2013-02-13 19:23 |
|
Status | reviewed => tested |
2013-02-18 17:06 |
|
Changeset attached | => occt master 3389667b |
2013-02-18 17:06 |
|
Assigned To | bugmaster => emv |
2013-02-18 17:06 |
|
Status | tested => verified |
2013-02-18 17:06 |
|
Resolution | open => fixed |
2013-02-20 10:19 | bugmaster | Target Version | => 6.6.0 |
2013-04-23 13:35 |
|
Status | verified => closed |
2013-04-29 15:22 |
|
Fixed in Version | => 6.6.0 |