0023751: Test case bugs modalg bug6334 does not work with new Boolean Operation Algorithm. Fix for the bug. Added simple condition: If the map myShapes (map of the parts of the tool that should be in result shape) is not filled then boolean operation of the given type will be performed. Modified test case bugs/modalg_4/bug6334. Small correction test cases